# projet_nsi_git

./: Escape - Adventure.tmx  README.md  game (copy).py  game.py  globals.py  jeu1.py  jeu2.py  jeu3.py  key.py  main.py  player.py  pyproject.toml
assets/: keys.tsx  map.tmx  qcm.csv
autre fichiers/: game.py  memory_game.py  player.py
exemple/: compteur_clé.py  game.py  main.py  pygame.xlsx
exemple/assets/: grass.tsx  maze.tsx  maze2.tsx
projet nsi/: carte.tmx  keys.tsx  maze2.tsx
